examples/test/testpolicy4961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4961
  namespace: namespace235
spec:
  podSelector:
    matchLabels:
      key42: value48
      key36: value10
      key14: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value23
      podSelector:
        matchLabels:
          key6: value6
